--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/react": "^4.2.1",
+    "@astrojs/vercel": "^8.1.2",
     "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.0.14",
     "@types/react": "^19.0.10",
@@ -30,6 +31,5 @@
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7"
   },
-  "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
-  "devDependencies": {}
+  "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3"
 }
