--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "blog",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,27 +9,26 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.0",
-    "@astrojs/react": "^4.2.1",
-    "@astrojs/vercel": "^8.1.2",
-    "@fontsource-variable/inter": "^5.2.5",
-    "@tailwindcss/vite": "^4.0.14",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@astrojs/mdx": "^4.2.4",
+    "@astrojs/react": "^4.2.4",
+    "@astrojs/vercel": "^8.1.3",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "add": "^2.0.6",
-    "astro": "^5.4.2",
-    "astro-expressive-code": "^0.40.2",
+    "astro": "^5.7.4",
+    "astro-expressive-code": "^0.41.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.503.0",
     "pnpm": "^10.6.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "remark-gemoji": "^8.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.14",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7"
   },
-  "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3"
+  "packageManager": "pnpm@10.9.0"
 }
