--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/react": "^4.2.4",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/vercel": "^8.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
